<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- MainActivity -->
    <string name="app_name">EasyMoney</string>
    <string name="nav_transaction_list">Transactions</string>
    <string name="nav_category_list">Categories</string>
    <string name="nav_analytics">Analytics</string>
    <string name="action_search">Search</string>
    <string name="action_add">Add Transaction</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="drawer_title">Menu</string>

    <!-- TransactionListFragment -->
    <string name="transaction_list_fragment_title">Transactions</string>
    <string name="decimal">.</string>
    <string name="uncategorized_transactions_label">Uncategorized</string>
    <string name="transactions_label">Transactions</string>
    <string name="empty_transaction_list">Press + to add transaction</string>

    <!-- CategoryListFragment -->
    <string name="category_list_fragment_title">Categories</string>
    <string name="empty_category_list">No categories</string>

    <!-- CategoryFragment -->
    <string name="category_children_label">Sub-categories</string>
    <string name="category_transaction_label">Transactions</string>
    <string name="empty_category_transaction_list">No transactions to show</string>

    <!-- AddOrEditTransactionFragment -->
    <string name="add_transaction_fragment_title">Add Transaction</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>
    <string name="dollar">$</string>
    <string name="transaction_description_label">Description:</string>
    <string name="categorize_button">Categorize</string>

    <!-- SelectCategoryDialogFragment -->
    <string name="select_category_dialog_fragment_title">Select Category</string>

    <!-- AddCategoryDialogFragment -->
    <string name="add_category_dialog_fragment_title">Add Category</string>
    <string name="add_category_button">Add</string>

    <!-- AnalyticsFragment -->
    <string name="analytics_fragment_title">Analytics</string>
    <string name="choose_category_button">Select category</string>
    <string name="from_date_label">From:</string>
    <string name="to_date_label">To:</string>
    <string name="from_date_button">Select</string>
    <string name="to_date_button">Select</string>
    <string name="analyze_button">Analyze</string>
    <string-array name="averages">
        <item>Daily</item>
        <item>Monthly</item>
    </string-array>
    <string name="average_label">average:</string>
    <string name="sum_label">Total:</string>
    <string name="back_label">back</string>
    <string name="forward_label">forward</string>
    <string name="empty_selected_transaction_list">No transactions to show</string>

    <!-- SelectDateDialogFragment -->
    <string name="select_date_dialog_fragment_title">Select Date</string>
    <string name="select_date_button">Select</string>

    <!-- ViewTransactionFragment -->
    <string name="view_transaction_fragment_title">View Transaction</string>
    <string name="transaction_category_label">Category:</string>

    <!-- Widget -->
    <string name="widget_quickadd_button">+Transaction</string>
    <string name="widget_expand_button">Full</string>

</resources>
