<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp" >

    <!-- amount -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollar"
            android:textSize="16pt"/>

        <TextView
            android:id="@+id/view_transaction_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rect"
            android:padding="10dp"
            android:textSize="16pt"
            android:layout_marginBottom="10dp" />

    </LinearLayout>

    <!-- description -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transaction_description_label"
        android:textSize="10pt"
        android:padding="10dp"
        android:gravity="center"/>
    <TextView
        android:id="@+id/view_transaction_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rect"
        android:padding="10dp"
        android:textSize="10pt"
        android:layout_marginBottom="20dp" />

    <!-- category -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transaction_category_label"
        android:textSize="10pt"
        android:padding="10dp"
        android:gravity="center"/>
    <TextView
        android:id="@+id/view_transaction_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rect"
        android:padding="10dp"
        android:textSize="10pt"
        android:layout_marginBottom="20dp" />


</LinearLayout>