<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- footer -->
    <LinearLayout
        android:id="@+id/add_transaction_footer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="0dp"
        android:background="@drawable/blue_border">

        <!-- Cancel -->
        <Button
            android:id="@+id/transaction_cancel_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/cancel_button"
            style="?android:attr/borderlessButtonStyle"/>
        <!-- Save -->
        <Button
            android:id="@+id/transaction_save_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/blue_background"
            android:text="@string/save_button"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>

    <!-- main entry body -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/add_transaction_footer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <!-- amount -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/green_background"
                android:padding="10dp">

                <!-- $ -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dollar"
                    android:textSize="32sp"/>
                <!-- amount entry -->
                <EditText
                    android:id="@+id/add_transaction_amount"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:textSize="32sp"
                    android:inputType="numberDecimal"/>

            </LinearLayout>

            <!-- description -->
            <EditText
                android:id="@+id/add_transaction_description"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:padding="10dp"
                android:inputType="textMultiLine|textNoSuggestions"
                android:gravity="top"
                android:background="@android:color/transparent"
                android:hint="@string/transaction_description_label"/>

            <!-- Categorize -->
            <Button
                android:id="@+id/transaction_categorize_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/categorize_button"
                android:textSize="20sp"
                android:gravity="left"
                android:padding="20dp"
                android:background="@drawable/light_blue_background"
                android:layout_marginBottom="20dp"
                android:drawableRight="@drawable/ic_right_arrow"
                android:freezesText="true"/>

            <!-- expense/income switch -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Switch
                    android:id="@+id/add_transaction_is_income"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:switchTextAppearance="@style/switch_text"
                    android:track="@drawable/switch_track"
                    android:textOff="Expense"
                    android:textOn="Income"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>