<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp" >

    <!-- footer -->
    <LinearLayout
        android:id="@+id/add_transaction_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <!-- Cancel -->
        <Button
            android:id="@+id/transaction_cancel_button"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button" />
        <!-- Save -->
        <Button
            android:id="@+id/transaction_save_button"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/save_button" />

    </LinearLayout>

    <!-- main entry body -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@id/add_transaction_footer">

        <!-- amount -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dollar"
                android:textSize="16pt"/>

            <EditText
                android:id="@+id/add_transaction_amount"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="16pt"
                android:padding="10dp"
                android:background="@drawable/rect"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <!-- description -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_transaction_description_label"
            android:textSize="10pt"
            android:padding="10dp"
            android:gravity="center"/>
        <EditText
            android:id="@+id/add_transaction_description"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/rect"
            android:inputType="text"
            android:layout_marginBottom="20dp"/>

        <!-- Categorize -->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/categorize_button"
            android:textSize="10pt"
            android:padding="20dp"
            android:background="@drawable/button"
            android:layout_marginBottom="20dp"/>

        <!-- expense/income switch -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Switch
                android:id="@+id/add_transaction_is_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10pt"
                android:textOff="Expense"
                android:textOn="Income" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>